--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.9'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -25,6 +26,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
 }
 
 tasks.named('test') {
