--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'
+
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 
 }
 
