--- a/build.gradle
+++ b/build.gradle
@@ -20,21 +20,17 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'
-
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
