16. added dynamic mail service by Thymeleaf
 On branch main

 Changes to be committed:
	modified:   src/main/java/com/crud/tasks/config/AdminConfig.java
	new file:   src/main/java/com/crud/tasks/service/MailCreatorService.java
	modified:   src/main/java/com/crud/tasks/service/SimpleEmailService.java
	modified:   src/main/resources/application.properties
	new file:   src/main/resources/templates/mail/created-trello-card-mail.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.mail.password=${TASK_APP_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 admin.mail = task_app@moleathole.pl
+admin.name = Kodilla User
 
 # ACTUATOR INFO
 management.endpoints.web.exposure.include=*
